# fast-api-hunty

./: .env.heroku  .env.local  Dockerfile  Dockerfile.heroku  Fast API Hunty.postman_collection.json  README.MD  docker-compose.yml  main.py  pyproject.toml
api/: companies.py  skills.py  users.py  vacancies.py
api/utils/: companies.py  skills.py  users.py  vacancies.py
database/: database.py
database/models/: company.py  mixins.py  required_skill.py  skill.py  user.py  user_skills.py  vacancy.py
schemas/: company.py  skill.py  user.py  vacancy.py
