[tool.poetry]
name = "fast-api-hunty"
version = "0.1.0"
description = ""
authors = ["Alvaro Perez <japersa92@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_hunty"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.3"
fastapi = "^0.83.0"
pydantic = "^1.10.2"
SQLAlchemy = "^1.4.41"
psycopg2-binary = "^2.9.3"
alembic = "^1.8.1"
pytest = "^7.1.3"
requests = "^2.28.1"
SQLAlchemy-Utils = "^0.38.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
